--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <title>Canal Neuropensamiento</title>
 
     <!--ICONO-->
-    <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="./src/assets/img/favicon.ico">
 
     <!--FACILITAR  LA BUSQUEDA EN LOS BUSCADORES-->
     <meta name="description"content="Esta página está destinada al desarrollo de proyectos académicos y de investigación en evaluación y psicometría ">
     <meta name="keywords" content="Educación, enseñanza, libros">
-
-    <!--CSS-->
-    <link rel="stylesheet" type="text/css" href="../css/estilos.css">
   </head>
   <body>
     <div id="app"></div>
